--- a/index.html
+++ b/index.html
@@ -16,18 +16,15 @@
             <span id="welcome">Click</span>
             <div class="tags">
                 <ul class="navi">
-                    <li data-img=""><a href="pages/portFolio.html" data-text="PortFolio">PortFolio</a></li>
-                    <li data-img=""><a href="pages/Posts.html" data-text="Board">Board</a></li>
+                    <li data-img=""><a href="pages/portFolio.html" data-text="PortFolio">About Me</a></li>
                     <li data-img=""><a href="pages/GuestBook.html" data-text="MessageTo">MessageTo</a></li>
                 </ul>
-                <div class="photo">
-
-                </div>
+                <div class="photo"></div>
             </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="script/page_fir.js"></script>
+    <script src="script/index.js"></script>
 </body>
 
 </html>
