--- a/pages/GuestBook.html
+++ b/pages/GuestBook.html
@@ -14,7 +14,8 @@
         </form>
     </div>
     <div class="content">
-
+        <!-- sample -->
+        <div>what you gonna do?</div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../script/GuestBook.js"></script>
