--- a/pages/portFolio.html
+++ b/pages/portFolio.html
@@ -2,9 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/style_portfolio.css">
     <title>MyHomePage</title>
 </head>
 <body>
-    
+    <div class="container">
+        <a href="../index.html" id = "home"><i class="fa fa-home" aria-hidden="true"></i></a>
+        <!-- part 1 -->
+        <div class="profile">
+            <div class="pic">
+
+            </div>
+            <div class="shortRef">
+                <p>
+                    안녕하세요! 미래의 풀스택 개발자 <b>김동훈</b>입니다.<br/>
+현재 경북대학교 4학년 학부생으로 개발자가 되기위해 노력하고 있습니다.
+천천히 그리고 꾸준히를 모토(moto)로 24/7 공부하는 개발자가 되고 싶습니다.
+어떻게하면 올바른 목표와 이를 이루기위한 계획을 세우는지에 신경쓰고 있습니다. 그리고 이를 토대로 모두가 성장하는 환경을 좋아합니다.
+                </p>
+            </div>
+            <hr>
+            <div class="contact">
+                <h1>Contact</h1>
+                <div class = "email"><span>Email</span>tmxkqotnl@gmail.com</div>
+               <div class = "github"><span>Github</span><a href="https://github.com/tmxkqotnl" target="_blank">https://github.com/tmxkqotnl</a></div>
+            </div>
+            <div class="skill">
+                <h1>Skills</h1>
+                <div>
+                    <h3>Backend</h3>
+                    <ul>
+                        <li>NodeJS</li>
+                        <li>Spring</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Frontend</h3>
+                    <ul>
+                        <li>HTML5, CSS</li>
+                        <li>JS</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>DevOps</h3>
+                    <ul>
+                        <li>MongoDB</li>
+                        <li>PostgreSQL</li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="project">
+                <h1>Project</h1>
+                <div class="video-frame" >
+                    <video src="../videos/1.mp4" muted="muted" type="video/mp4" controls></video>
+                </div>
+                <div class="video-frame">
+                    <video src="../videos/2.mp4" muted="muted" controls type = "video/mp4"></video>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </body>
 </html>
