--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <span id="welcome">Click</span>
             <div class="tags">
                 <ul class="navi">
-                    <li data-img=""><a href="pages/portFolio.html" data-text="PortFolio">About Me</a></li>
-                    <li data-img=""><a href="pages/GuestBook.html" data-text="MessageTo">MessageTo</a></li>
+                    <li data-img=""><a href="pages/portFolio.html" data-text="PortFolio">About</a></li>
+                    <li data-img=""><a href="pages/GuestBook.html" data-text="MessageTo">Mailbox</a></li>
                 </ul>
                 <div class="photo"></div>
             </div>
