--- a/pages/portFolio.html
+++ b/pages/portFolio.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <div class="container">
+        <!-- Home button -->
         <a href="../index.html" id = "home"><i class="fa fa-home" aria-hidden="true"></i></a>
-        <!-- part 1 -->
+        <!-- profile -->
         <div class="profile">
             <div class="pic">
 
@@ -22,6 +23,7 @@
                 </p>
             </div>
             <hr>
+            <!-- contact info -->
             <div class="contact">
                 <h1>Contact</h1>
                 <div class = "email"><span>Email</span>tmxkqotnl@gmail.com</div>
@@ -52,6 +54,7 @@
                 </div>
             </div>
             <hr>
+            <!-- project video -->
             <div class="project">
                 <h1>Project</h1>
                 <div class="video-frame" >
@@ -63,6 +66,7 @@
             </div>
         </div>
     </div>
+    
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </body>
 </html>
