--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <body>
     <div class="container">
         <div class="content">
+            <!-- video frame -->
             <div class="video-frame">
                 <video src="videos/open.mp4" autoplay="autoplay" muted="muted"></video>
             </div>
+            <!-- moving button -->
             <span id="welcome">Click</span>
+            <!-- navigation tags -->
             <div class="tags">
                 <ul class="navi">
                     <li data-img=""><a href="pages/portFolio.html" data-text="PortFolio">About</a></li>
@@ -23,6 +26,7 @@
             </div>
         </div>
     </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="script/index.js"></script>
 </body>
