--- a/pages/GuestBook.html
+++ b/pages/GuestBook.html
@@ -6,13 +6,10 @@
     <title>MyHomePage</title>
 </head>
 <body>
-    <!-- Home button -->
-    <a href="../index.html" id = "home"><i class="fa fa-home" aria-hidden="true"></i></a>
-    
     <div class="container">
         <!-- text input area -->
         <form class="texting">
-            <input type="text" id = "letter" placeholder="less than 100 plz..">
+            <input type="text" id = "letter" placeholder="any words!">
             <input type="submit" id = "send"value = "SEND">
         </form>
     </div>
