--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style_index.css">
-    <title>Document</title>
+    <title>WebHomepage</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <section id="sec_fir">
             <div>
                 <div class="image-frame">
-                    <img src="/images/index.png" alt="">
+                    <img src="./images/index.png" alt="">
                 </div>
             </div>
             <div class = "treeImg">
@@ -31,12 +31,12 @@
         </section>
         <section id="sec_sec">
             <div>
-                <iframe src="../pages/portFolio.html" frameborder="0" class = "iframe-sec"></iframe>
+                <iframe src="./pages/portFolio.html" frameborder="0" class = "iframe-sec"></iframe>
             </div>
         </section>
         <section id="sec_last">
             <div>
-                <iframe src="../pages/GuestBook.html" frameborder="0" class = "iframe-sec"></iframe>
+                <iframe src="./pages/GuestBook.html" frameborder="0" class = "iframe-sec"></iframe>
             </div>
         </section>
     </div>
