--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
         <section id="sec_fir">
             <div>
                 <div class="image-frame">
-                    <img src="/images/index.png" alt="">
+                    <img src="./images/index.png" alt="">
                 </div>
             </div>
             <div class = "treeImg">
-                <img src="/images/tree.jpg">
+                <img src="./images/tree.jpg">
             </div>
         </section>
         <section id="sec_sec">
             <div>
-                <iframe src="/pages/portFolio.html" frameborder="0" class = "iframe-sec"></iframe>
+                <iframe src="./pages/portFolio.html" frameborder="0" class = "iframe-sec"></iframe>
             </div>
         </section>
         <section id="sec_last">
             <div>
-                <iframe src="/pages/GuestBook.html" frameborder="0" class = "iframe-sec"></iframe>
+                <iframe src="./pages/GuestBook.html" frameborder="0" class = "iframe-sec"></iframe>
             </div>
         </section>
     </div>
