--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style_index.css">
+    <link rel="stylesheet" href="./css/style_index.css">
     <title>WebHomepage</title>
 </head>
 
